--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
 	<modules>
 		<module>discovery-service</module>
+		<module>api-gateway</module>
 	</modules>
 
 	<parent>
@@ -28,8 +29,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
 		</dependency>
 
 		<dependency>
