--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<spring-cloud.version>2021.0.0</spring-cloud.version>
 		<model-mapper.version>2.4.5</model-mapper.version>
 		<swagger.version>2.9.2</swagger.version>
+		<jackson-databind.version>2.13.1</jackson-databind.version>
 	</properties>
 
 	<dependencies>
