--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 		<module>discovery-service</module>
 		<module>user-service</module>
 		<module>api-gateway</module>
-	</modules>
+        <module>post-service</module>
+    </modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
