--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>modelmapper</artifactId>
             <version>${model-mapper.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.3</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
